--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
 body {
     background-color: #74EBD5;
-background-image: linear-gradient(90deg, #74EBD5 0%, #001ca4 100%);
+    background-image: linear-gradient(90deg, #74EBD5 0%, #001ca4 100%);
+
+}
+
+header {
+    display: flex;
+    justify-content: center;
+}
+
+ul {
+    display: flex;
+    list-style: none;
 
 }
