--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ header {
     justify-content: center;
 }
 
-.nav_lista {
+.nav-lista {
     display: flex;
     list-style: none;
     font-size: 60px;
@@ -22,4 +22,18 @@ header {
     cursor: pointer;
     background-color:#001ca4;
     color:whitesmoke ;
+}
+
+section {
+    width: 100%;
+    padding-left: 8%;
+    padding-right: 8%;
+    padding-top: 2%;
+}
+
+.moldura_videos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around
+    ;
 }
